# FLUXOS_cpp

./: .dockerignore  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
Working_example/: Flow_river.fluxos  Flow_river_30h.fluxos  Qmelt_synthetic.fluxos  Rosa_trimesh.msh  Rosa_trimesh_fine.msh  modset.json  modset_river.json  modset_river_30h.json  modset_river_steady.json  modset_soil.json  modset_trimesh.json  modset_trimesh_soil.json
containers/: Dockerfile  docker-compose.yml  fluxos_apptainer.def  fluxos_apptainer_cuda.def
fluxos_preprocessing/: __init__.py  config_generator.py  fluxos_setup.py  fluxos_viewer.py  mesh_generation.py  requirements.txt
fluxos_preprocessing/1_Model_Config/: README.md  model_config_template.py
fluxos_preprocessing/1_Model_Config/config_support_lib/: dem_download.py  dem_operations.py  driver.py  gen_report.py
fluxos_preprocessing/2_Read_Outputs/: README.md  read_output_template.py
fluxos_preprocessing/2_Read_Outputs/output_supporting_lib/: __init__.py  analysis_driver.py  flood_statistics.py  fluxos_viewer.py  gen_results_report.py  plot_horton_infiltration.py  read_results.py
fluxos_web/: index.html
in_a_nutshell/: 1_FLUXOS_Overview.html  2_How_to_Compile_FLUXOS.html  2_How_to_Compile_and_Run_FLUXOS.html  3_Model_Setup_Guide.html  3_Supporting_Scripts.html  4_Supporting_Scripts.html
scripts/: run_fluxos_hpc.slurm
src/fluxos/: ADEsolver_calc.cpp  ADEsolver_calc.h  GlobVar.h  common.cpp  common.h  cuda_kernels.cu  cuda_kernels.h  cuda_memory.cu  cuda_memory.h  cuda_soil_infiltration.cu  cuda_soil_infiltration.cuh  cuda_solver_dry.cuh  cuda_solver_wet.cuh  hydrodynamics_calc.cpp  hydrodynamics_calc.h  initiate.cpp  initiate.h  main.cpp  mpi_domain.cpp  mpi_domain.h  mpi_io.cpp  mpi_io.h  read_functions.cpp  read_functions.h  soil_infiltration.cpp  soil_infiltration.h  solver_drydomain.cpp  solver_drydomain.h  solver_wetdomain.cpp  solver_wetdomain.h  write_results.cpp  write_results.h
src/fluxos/trimesh/: TriMesh.cpp  TriMesh.h  TriSolution.cpp  TriSolution.h  tri_ade_solver.cpp  tri_ade_solver.h  tri_cuda_kernels.cu  tri_cuda_kernels.h  tri_cuda_memory.cu  tri_cuda_memory.h  tri_cuda_soil_infiltration.cu  tri_cuda_soil_infiltration.cuh  tri_forcing.cpp  tri_forcing.h  tri_gradient.cpp  tri_gradient.h  tri_hydrodynamics.cpp  tri_hydrodynamics.h  tri_initiate.cpp  tri_initiate.h  tri_mesh_io.cpp  tri_mesh_io.h  tri_mpi_domain.cpp  tri_mpi_domain.h  tri_soil_infiltration.cpp  tri_soil_infiltration.h  tri_solver_dry.cpp  tri_solver_dry.h  tri_solver_wet.cpp  tri_solver_wet.h  tri_wintra_solver.cpp  tri_wintra_solver.h  tri_write_results.cpp  tri_write_results.h
src/openwq/: OpenWQ_hydrolink.cpp
supporting_scripts/: __init__.py  requirements.txt
supporting_scripts/1_Model_Config/: README.md  model_config_template.py
supporting_scripts/1_Model_Config/config_support_lib/: __init__.py  dem_download.py  dem_operations.py  driver.py  gen_report.py  mesh_generation.py
supporting_scripts/2_Read_Outputs/: README.md  read_output_template.py
supporting_scripts/2_Read_Outputs/fluxos_web/: index.html
supporting_scripts/2_Read_Outputs/output_supporting_lib/: analysis_driver.py  flood_statistics.py  fluxos_viewer.py  gen_results_report.py  plot_horton_infiltration.py
wikipage/source/: Build.rst  CUDA.rst  Calibration.rst  Containers.rst  CouplingOpenWQ.rst  Credicts.rst  Digital.rst  Documentation.rst  Download.rst  Git.rst  HPC.rst  In.rst  Initial.rst  Inovation.rst  Input.rst  Installation.rst  License.rst  Linux.rst  MacOS.rst  Master.rst  OpenWQIO.rst  OpenWQIntegration.rst  Overview.rst  SupportingScripts.rst  Theoretical.rst  TriangularMesh.rst  Windows.rst  conf.py  file.rst  index.rst  out.rst
